[metadata]
# replace with your username:
name = tb-helper
version = 0.0.1
author = Mohammad Farid Azampour
author_email = mf.azampur@tum.de
description = A helper package for better viewing results on tensorboard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mfazampour/tensorboard-helper
project_urls =
    Bug Tracker = https://github.com/mfazampour/tensorboard-helper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src